crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__list_trailing_comma.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::List(&List::Expr(&Expr::Start(1, 13), 1, 13), 1, 9),\n\"value = [1, ]\")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 13 }, end: Position { line: 1, column: 13 } }

Expected an expression before the closing delimiter.

Add the missing expression, or remove a trailing comma.
