crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__macro_indent_arg.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: "value = foo!(\n1)"
---
nash::syntax

  × Expected a macro argument.
   ╭─[src/Main.nash:2:1]
 1 │ value = foo!(
 2 │ 1)
   · ─
   ╰────
  help: Add an indented expression inside the parentheses.
