crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__macro_missing_arg.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Macro(&Macro::Arg(&Expr::Start(1, 9), 1, 9), 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected an expression in a macro invocation.

Add an expression or `todo` for an unfinished body.
