crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__macro_open.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Macro(&Macro::Open(1, 9), 1, 9), \"value = \")"
---
UNFINISHED MACRO
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I was partway through parsing a macro invocation, but I got stuck here:

I was expecting an opening parenthesis after the macro's ! marker.
