crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__missing_else.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = if True then 42
---
nash::syntax

  × Expected an else branch.
   ╭─[src/Main.nash:1:24]
 1 │ value = if True then 42
   ·                        ─
   ╰────
  help: Add `else` and an expression; every if expression needs both branches.
