crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__missing_operand.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorRight(\"+\", 1, 13), \"value = 1 + \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 13 }, end: Position { line: 1, column: 13 } }

Expected an operand after `(+)`.

Add an expression on the same line or indent it on the next line.
