crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__number_hex_digit.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::Number(Number::HexDigit, 1, 9), \"value = \")"
---
INVALID HEXADECIMAL
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

Expected a hexadecimal digit.

Use digits from `0123456789abcdefABCDEF`.
