crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__number_no_leading_zero.snap
---
source: crates/nash-report/src/syntax/expr.rs
description: value = 01
---
nash::syntax

  × Integer has leading zeros.
   ╭─[src/Main.nash:1:9]
 1 │ value = 01
   ·         ─
   ╰────
  help: Remove the leading zeros.
