crates/nash-report/src/syntax/snapshots/nash_report__syntax__expr__tests__operand_boolean.snap
---
source: crates/nash-report/src/syntax/expr.rs
expression: "snapshot(Expr::OperatorRight(\"&&\", 1, 9), \"value = \")"
---
MISSING EXPRESSION
Region { start: Position { line: 1, column: 9 }, end: Position { line: 1, column: 9 } }

I just saw a && operator, so I am getting stuck here:

I was expecting to see an expression next. Something like True or False that
makes sense with boolean logic.
